--- a/index.html
+++ b/index.html
@@ -37,26 +37,34 @@
     <section class="questions">
       <h1>FAQ</h1>
       <div>
-        <p id="question1" > How many team members can I invite? <img src="images/icon-arrow-down.svg" class="arrow" id="arrow1"></p>
+        <p id="question1"> How many team members can I invite? <img src="images/icon-arrow-down.svg" alt="arrow"
+            class="arrow" id="arrow1"></p>
         <p id="answer1" class="appear">You can invite up to 2 additional users on the Free plan. There is no limit on
-        team members for the Premium plan.</p>
+          team members for the Premium plan.</p>
       </div>
       <div>
-        <p id="question2">What is the maximum file upload size? <img src="images/icon-arrow-down.svg" class="arrow" id="arrow2"></p>
-        <p id="answer2" class="appear">No more than 2GB. All files in your account must fit your allotted storage space.</p>
+        <p id="question2">What is the maximum file upload size? <img src="images/icon-arrow-down.svg" alt="arrow"
+            class="arrow" id="arrow2"></p>
+        <p id="answer2" class="appear">No more than 2GB. All files in your account must fit your allotted storage space.
+        </p>
       </div>
       <div>
-        <p id="question3">How do I reset my password?<img src="images/icon-arrow-down.svg" class="arrow" id="arrow3"></p>
-        <p id="answer3" class="appear"> Click “Forgot password” from the login page or “Change password” from your profile page.
-        A reset link will be emailed to you.</p>
+        <p id="question3">How do I reset my password?<img src="images/icon-arrow-down.svg" alt="arrow" class="arrow"
+            id="arrow3"></p>
+        <p id="answer3" class="appear"> Click “Forgot password” from the login page or “Change password” from your
+          profile page.
+          A reset link will be emailed to you.</p>
       </div>
       <div>
-        <p id="question4"> Can I cancel my subscription?<img src="images/icon-arrow-down.svg" class="arrow" id="arrow4"></p>
+        <p id="question4"> Can I cancel my subscription?<img src="images/icon-arrow-down.svg" alt="arrow" class="arrow"
+            id="arrow4"></p>
         <p id="answer4" class="appear"> Yes! Send us a message and we’ll process your request no questions asked.</p>
       </div>
       <div>
-        <p id="question5">Do you provide additional support?<img src="images/icon-arrow-down.svg" class="arrow" id="arrow5"></p>
-        <p id="answer5" class="appear"> Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+        <p id="question5">Do you provide additional support?<img src="images/icon-arrow-down.svg" alt="arrow"
+            class="arrow" id="arrow5"></p>
+        <p id="answer5" class="appear"> Chat and email support is available 24/7. Phone lines are open during normal
+          business hours.</p>
       </div>
     </section>
   </div>
@@ -66,7 +74,7 @@
       Coded by <a href="#">Przemek Bubak</a>.
     </div>
   </footer>
-  <script src = "scripts.js"></script>
+  <script src="scripts.js"></script>
 </body>
 
 </html>
